--- a/client/styles/_fonts.scss
+++ b/client/styles/_fonts.scss
@@ -14,11 +14,11 @@
 ////////////////////////////////////////////////////////////////////////
 // FINANCIER TEXT
 @include oFontsInclude(FinancierTextWeb, $weight: regular, $style: normal);
-@include oFontsInclude(FinancierTextWeb, $weight: regular, $style: italic);
+// @include oFontsInclude(FinancierTextWeb, $weight: regular, $style: italic);
 
 ////////////////////////////////////////////////////////////////////////
 // FINANCIER DISPLAY
-// @include oFontsInclude(FinancierDisplayWeb, $weight: regular, $style: normal);
+@include oFontsInclude(FinancierDisplayWeb, $weight: regular, $style: normal);
 // @include oFontsInclude(FinancierDisplayWeb, $weight: regular, $style: italic);
 
 ////////////////////////////////////////////////////////////////////////
