--- a/client/styles/_base.scss
+++ b/client/styles/_base.scss
@@ -18,7 +18,8 @@ body {
   .page-wrapper {
     min-width: 320px;
     max-width: 100%;
-    overflow: hidden;
+    // overflow: hidden;
+    position: relative;
   }
 
     main {
