--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -26,4 +26,73 @@ $o-grid-debug-mode: true;
 @import 'site-header';
 @import 'intro';
 @import 'closing';
-// (...add more here!)
+
+
+.overlay {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 5;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+  .overlay-content {
+    background: rgba(255, 255, 255, 0.9);
+    max-height: 80vh;
+    max-width: 95vw;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+
+    order: 0;
+    flex: 0 0 auto;
+    align-self: center;
+  }
+
+
+.overlay--hidden {
+  display: none;
+}
+
+
+.page-wrapper.showing-overlay {
+  max-height: 100vh;
+  overflow: hidden;
+}
+.page-wrapper-2 {
+  position: relative;
+}
+
+
+.story__story-figure {
+  @include shadow-4dp;
+
+  margin: 0;
+  cursor: pointer;
+  display: inline-block;
+
+  transition: box-shadow 0.15s linear;
+  background: white;
+
+  &:hover {
+    @include shadow-8dp;
+    transition: box-shadow 0.25s linear;
+  }
+
+  &:active {
+    > img {
+      opacity: 0.5;
+    }
+  }
+
+  > img {
+    display: block;
+  }
+}
