--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -34,8 +34,8 @@ $o-grid-debug-mode: true;
   width: 100vw;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.5);
   z-index: 5;
+  transition: background-color 1.5s linear;
 
   display: flex;
   flex-direction: row;
@@ -43,22 +43,44 @@ $o-grid-debug-mode: true;
   justify-content: center;
   align-content: center;
   align-items: center;
+
 }
   .overlay-content {
-    background: rgba(255, 255, 255, 0.9);
+    @include shadow-8dp;
+
+    background-color: rgba(255, 255, 255, 0.9);
     max-height: 80vh;
     max-width: 95vw;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
+    padding: 0 20px;
+    position: relative;
 
     order: 0;
     flex: 0 0 auto;
     align-self: center;
+
+    // &:after {
+    //   content: '';
+    //   position: absolute;
+    //   top: 0;
+    //   left: 0;
+    //   width: 100%;
+    //   height: 100%;
+    //   box-shadow: inset 0 0 8px rgba(#fff, 1);
+    // }
   }
 
 
 .overlay--hidden {
+  background: rgba(0, 0, 0, 0);
+  pointer-events: none;
   display: none;
+}
+
+.overlay--tinted {
+  background: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 
@@ -74,9 +96,9 @@ $o-grid-debug-mode: true;
 .story__story-figure {
   @include shadow-4dp;
 
-  margin: 0;
+  margin: 0 auto;
   cursor: pointer;
-  display: inline-block;
+  width: 300px;
 
   transition: box-shadow 0.15s linear;
   background: white;
@@ -88,11 +110,20 @@ $o-grid-debug-mode: true;
 
   &:active {
     > img {
-      opacity: 0.5;
+      // opacity: 0.5;
+      transition: opacity 0s linear;
     }
   }
 
   > img {
     display: block;
+    transition: opacity 0.5s linear;
   }
+}
+
+
+.content {
+  margin: 0 10px;
+  max-width: 800px;
+  margin: 0 auto;
 }
