--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,6 +1,6 @@
 // Configuration for Origami components
 $o-assets-global-path: '//build.origami.ft.com/files/';
-$o-grid-is-silent: false;
+$o-grid-is-silent: true;
 $o-grid-debug-mode: true;
 
 
@@ -35,7 +35,7 @@ $o-grid-debug-mode: true;
   top: 0;
   left: 0;
   z-index: 5;
-  transition: background-color 1.5s linear;
+  transition: background-color 0.5s linear;
 
   display: flex;
   flex-direction: row;
@@ -51,6 +51,7 @@ $o-grid-debug-mode: true;
     background-color: rgba(255, 255, 255, 0.9);
     max-height: 80vh;
     max-width: 95vw;
+    max-width: 740px;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     padding: 0 20px;
@@ -79,7 +80,6 @@ $o-grid-debug-mode: true;
 }
 
 .overlay--tinted {
-  background: rgba(0, 0, 0, 0);
   background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -100,12 +100,12 @@ $o-grid-debug-mode: true;
   cursor: pointer;
   width: 300px;
 
-  transition: box-shadow 0.15s linear;
+  transition: box-shadow 0.25s linear;
   background: white;
 
   &:hover {
     @include shadow-8dp;
-    transition: box-shadow 0.25s linear;
+    transition: box-shadow 0.1s linear;
   }
 
   &:active {
@@ -118,12 +118,38 @@ $o-grid-debug-mode: true;
   > img {
     display: block;
     transition: opacity 0.5s linear;
+    width: 300px;
   }
 }
 
 
+
+
+
 .content {
-  margin: 0 10px;
-  max-width: 800px;
+  max-width: 720px;
   margin: 0 auto;
+  padding: 0 10px;
+
+  
+
+  p {
+    font-size: 19px;
+    line-height: 1.25;
+  }
+}
+
+
+
+@include oGridRespondTo(M) {
+  .content {
+    p {
+      font-size: 22px;
+      line-height: 1.375;
+    }
+  }
+  .story__story-figure,
+  .story__story-figure > img {
+    width: 500px;
+  }
 }
