--- a/client/styles/_base.scss
+++ b/client/styles/_base.scss
@@ -48,7 +48,7 @@ body {
 
       p {
         font-size: 22px;
-
+        line-height: 29px;
         font-family: ftFont('FinancierTextWeb');
       }
     }
